# Quentropy

./: .gitignore  pyproject.toml
data/: generated_sql_queries.txt  grid_search_subsampled_dev_set.json  subsampled_50.json  test.json
notebooks/: cg.ipynb  eval.ipynb  ir.ipynb  qent_clustering.ipynb  qf.ipynb  qf_w_timeout.ipynb  qf_with_sem_ent.ipynb  query_rephraser.ipynb  sa.ipynb  sem_ent.ipynb  subsample_test_set.ipynb
runs/CHASE/2/: 2025-01-26_00-05-42_138211_run_1.csv  2025-01-26_00-21-19_034954_run_3.csv  2025-01-26_00-44-57_712858_run_5.csv  2025-01-26_01-05-24_462950_run_7.csv  2025-01-26_01-16-44_688386_run_8.csv  2025-01-26_01-57-13_258506_run_12.csv  2025-01-26_03-02-08_451960_run_17.csv  2025-01-26_03-36-07_059350_run_19.csv  2025-01-26_04-21-00_024628_run_23.csv  2025-01-26_04-33-30_090680_run_25.csv
runs/QENT/1/: 2025-01-27_00-35-30_374083_run_1.csv  2025-01-27_01-07-36_377908_run_2.csv  2025-01-27_01-22-41_908175_run_3.csv
runs/QENT/2/: 2025-01-27_09-05-38_410326_run_1.csv  2025-01-27_09-26-20_140780_run_2.csv  2025-01-27_09-45-48_600691_run_3.csv
runs/QENT/3/: 2025-01-27_11-38-44_614563_run_2.csv
runs/QENT/4/: 2025-01-27_12-22-01_216200_run_1.csv  (+11 more)
scripts/: generate_synth_queries.py  prototype.py  run_chase_gridsearch.py  run_chase_pipeline.py  run_chase_pipeline_SE.py
src/cand_gen/: prompts.py  utils.py
src/info_retrieval/: lsh.py  prompts.py  utils.py
src/model/: embedding.py  inference_endpoints.py  response_utils.py
src/query_fix/: prompts.py  utils.py
src/selection_agent/: prompts.py  utils.py
(+86 files in other folders)
